@@ -1,5 +1,7 @@
 2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-transform-headers): Removed unused variable.
+
 	* shr-color.el (shr-color-set-minimum-interval): Renamed to add prefix
 	(bug#10732).
 
